schema/testdata/validation_attribute_expression_invalid_root_model/schema.keel
model Post {
  fields {
    title Text
  }

  @permission(
    expression: pos.title != "",
    actions: [get]
  )
}
