schema/testdata/errors/expression_literal_string_in_literal_array.keel
model Post {
    @permission(
        //expect-error:21:36:E026:"bob" is Text and [1, 2] is an array of Number
        expression: "bob" in [1, 2],
        actions: [get]
    )
}
